tests/invalid/missing-summary.pmf
{
  "_invalid_reason": "Missing required field: summary",
  "pmf_version": "0.1",
  "engine": "test-engine",
  "identity": {
    "seed": 1,
    "bpm": 120.0,
    "key": "C major",
    "bars": 4
  },
  "render_key": {
    "sample_rate": 44100,
    "bars": 4,
    "stem_format": "stereo",
    "loop_mode": "looped",
    "engine_version_major": 1
  }
}
